--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stylish UPI QR Code Generator</title>
+    <title>Stylish UPI QR Code Generator by</title>
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- ** NEW ** Advanced QR Code generation library for styling -->
@@ -227,4 +227,5 @@
     </script>
 </body>
 </html>
+
 
